--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-firebase/app": "^13.1.0",
     "@react-native-firebase/auth": "^13.1.0",
     "@react-native-firebase/firestore": "^13.1.0",
@@ -21,11 +22,15 @@
     "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-circular-progress-indicator": "^4.1.1",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-pager-view": "^5.4.9",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1"
   },
   "devDependencies": {
